--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gemma Sellés Lloret y Ana María Soler Guijarro"> <!-- OJO CUIDADO -->
-    <link rel="stylesheet" href="css/estilo.css">
-    <script src="js/codigo.js"></script>
-    <script src="js/canvas.js"></script>
+    <link rel="stylesheet" href="../css/estilo.css">
+    <script src="../js/codigo.js"></script>
+    <script src="../js/canvas.js"></script>
 
     <!-- Google Fonts -->
     <!--  <link rel="preconnect" href="https://fonts.googleapis.com">
