--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -100,6 +100,8 @@
                     <button onclick="aColor('b');">Azul</button>
                 </footer>
             </article>
+
+            <img src="src/mob2.jpg" alt="img de clase" width="360px" height="240px">
         </section> 
 
     </main>
