--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -104,6 +104,21 @@
             <img src="src/mob2.jpg" alt="img de clase" width="360px" height="240px">
         </section> 
 
+        <table>
+            <caption>Título tabla</caption>
+            <tr>
+                <th>Celda tit 1</th>
+                <th>Celda tit 2</th>
+                <th>Celda tit 3</th>
+                <th>Celda tit 4</th>
+            </tr>
+            <tr>
+                <td>Celda 1</td>
+                <td>Celda 2</td>
+                <td>Celda 3</td>
+                <td>Celda 4</td>
+            </tr>
+        </table>
     </main>
 
     <footer id="g-footer">
