--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -101,10 +101,10 @@
                 </footer>
             </article>
 
-            <img src="src/mob2.jpg" alt="img de clase" width="360px" height="240px">
+            <img src="src/mob2.jpg" alt="img de clase" width="360px" height="240px"> <!-- no sé pa' qué està -->
         </section> 
 
-        <table>
+        <table id="g-tabla" >
             <caption>Título tabla</caption>
             <tr>
                 <th>Celda tit 1</th>
