--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/estilo.css">
     <script src="../js/codigo.js"></script>
     <script src="../js/canvas.js"></script>
-
+    <script src="../js/peticions.js"></script>
     <!-- Google Fonts -->
     <!--  <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
