--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- MENÚ HAMBURGUESA -->
-    <nav>
+    <nav id="g-navbar">
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
         <ul class="menu" id="menu">
