--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -103,6 +103,8 @@
 
             <img src="src/mob2.jpg" alt="img de clase" width="360px" height="240px"> <!-- no sé pa' qué està -->
         </section> 
+
+        <!-- TABLA -->
         <section>
             <table id="g-tabla" >
                 <caption>Título tabla</caption>
@@ -121,6 +123,7 @@
             </table>
         </section>
 
+       <!--  TARJETAS GRID  -->
         <section>
             <h3>Últimas publicaciones</h3>
             <div class="image-grid">
