botonera fotos comentada

--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -54,10 +54,10 @@
                 </datalist><br>
                 <button class="boton"><i class="fa-solid fa-image"></i> Añadir foto</button>
                 <label for="img1">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file" id="img1"  name="img" accept="image/*" class="img" required><br></label>
-                <div class="botonera"> 
+                <!-- <div class="botonera"> 
                     <label class="carpeta  "><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
                     <button class="boton ko" type="button"><i class="fa-solid fa-trash-can"></i> </button>
-                </div>
+                </div> -->
                 <div class="botonera">
                     <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
                 </div> 
