--- a/apunts/guia HTML.html
+++ b/apunts/guia HTML.html
@@ -3,33 +3,60 @@
 <h2 class="code-line" data-line-start="1" data-line-end="2"><a id="OJO_1"></a>OJO</h2>
 <ul>
 <li class="has-line-data" data-line-start="2" data-line-end="3">Mirar la direcció dels link del css i js per si estan mal relacionats (…/ o sense).</li>
-<li class="has-line-data" data-line-start="3" data-line-end="5">Tindre en compte que els estils de cada práctica son diferents (hi ha coses que es repetixen però les que no no estan)</li>
+<li class="has-line-data" data-line-start="3" data-line-end="4">Tindre en compte que els estils de cada práctica son diferents (hi ha coses que es repetixen però les que no no estan)</li>
+<li class="has-line-data" data-line-start="4" data-line-end="6">Canviar noms del <em>author</em> en &lt;meta&gt;</li>
 </ul>
-<h2 class="code-line" data-line-start="5" data-line-end="6"><a id="HTML_5"></a>HTML</h2>
-<h3 class="code-line" data-line-start="6" data-line-end="7"><a id="HTML_Base_6"></a>HTML Base</h3>
-<p class="has-line-data" data-line-start="7" data-line-end="8">En <a href="html/index.html">index.html</a> tenim contemplats:</p>
+<h2 class="code-line" data-line-start="6" data-line-end="7"><a id="HTML_6"></a>HTML</h2>
+<h3 class="code-line" data-line-start="7" data-line-end="8"><a id="HTML_Base_7"></a>HTML Base</h3>
+<p class="has-line-data" data-line-start="8" data-line-end="9">En <a href="html/index.html">index.html</a> tenim contemplats:</p>
 <ul>
-<li class="has-line-data" data-line-start="8" data-line-end="9"><strong>head</strong> amb tots els <code>&lt;meta&gt;</code> possibles (inclosos les GoogleFonts, FontAwesome), i enllaços als CSS i JS (mirar <a href="#llegir">LLEGIR</a>)</li>
-<li class="has-line-data" data-line-start="9" data-line-end="10"><strong>body</strong> amb <code>onload=&quot;prepararCanvas()&quot;</code> de <a href="js/canvas.js">canvas.js</a></li>
-<li class="has-line-data" data-line-start="10" data-line-end="11"><strong>header</strong> amb titol, logo (podem no posar)</li>
-<li class="has-line-data" data-line-start="11" data-line-end="12"><strong>navbar</strong> amb <a href="html/index.html#g-navbar">menú hamburguesa</a> i 2 enllaços (es posen + amb JS)</li>
-<li class="has-line-data" data-line-start="12" data-line-end="13"><strong>formulari</strong> de <a href="html/index.html#g-formulario">login</a> amb inputs <a href="html/index.html#l_login">text</a>, <a href="html/index.html#pwd">password</a> (amb pattern), <a href="html/index.html#texto">textarea</a> <a href="html/index.html#ubis">datalist</a></li>
-<li class="has-line-data" data-line-start="13" data-line-end="14"><strong>dialog</strong> en <a href="html/index.html#g-modal">boton modal</a></li>
-<li class="has-line-data" data-line-start="14" data-line-end="15"><strong>canvas</strong> en un per a posar linies, rectangles, divisions… + posar i copiar imatges en <a href="html/index.html#cv01">CV01</a>. I de la imatge posada amb el de dalt, modificarli els canals de color en <a href="html/index.html#cv02">CV02</a></li>
-<li class="has-line-data" data-line-start="15" data-line-end="16"><strong>table</strong> en una <a href="html/index.html#g-tabla">taula estática</a></li>
-<li class="has-line-data" data-line-start="16" data-line-end="17"><strong>targetitas</strong> en <a href="html/index.html#image-grid">articles</a> amb textoverflow per als títols, imatges ajustades, data…</li>
-<li class="has-line-data" data-line-start="17" data-line-end="18"><strong>Drag &amp; Drop</strong></li>
-<li class="has-line-data" data-line-start="18" data-line-end="19"><strong>SVG</strong></li>
-<li class="has-line-data" data-line-start="19" data-line-end="21"><strong>Video</strong></li>
+<li class="has-line-data" data-line-start="9" data-line-end="10"><strong>head</strong> amb tots els <code>&lt;meta&gt;</code> possibles (inclosos les GoogleFonts, FontAwesome), i enllaços als CSS i JS (mirar <a href="#llegir">LLEGIR</a>)</li>
+<li class="has-line-data" data-line-start="10" data-line-end="11"><strong>body</strong> amb <code>onload=&quot;prepararCanvas()&quot;</code> de <a href="js/canvas.js">canvas.js</a></li>
+<li class="has-line-data" data-line-start="11" data-line-end="12"><strong>header</strong> amb titol, logo (podem no posar)</li>
+<li class="has-line-data" data-line-start="12" data-line-end="13"><strong>navbar</strong> amb <a href="html/index.html#g-navbar">menú hamburguesa</a> i 2 enllaços (es posen + amb JS)</li>
+<li class="has-line-data" data-line-start="13" data-line-end="14"><strong>formulari</strong> de <a href="html/index.html#g-formulario">login</a> amb inputs <a href="html/index.html#l_login">text</a>, <a href="html/index.html#pwd">password</a> (amb pattern), <a href="html/index.html#texto">textarea</a> <a href="html/index.html#ubis">datalist</a></li>
+<li class="has-line-data" data-line-start="14" data-line-end="15"><strong>dialog</strong> en <a href="html/index.html#g-modal">boton modal</a></li>
+<li class="has-line-data" data-line-start="15" data-line-end="16"><strong>canvas</strong> en un per a posar linies, rectangles, divisions… + posar i copiar imatges en <a href="html/index.html#cv01">CV01</a>. I de la imatge posada amb el de dalt, modificarli els canals de color en <a href="html/index.html#cv02">CV02</a></li>
+<li class="has-line-data" data-line-start="16" data-line-end="17"><strong>table</strong> en una <a href="html/index.html#g-tabla">taula estática</a></li>
+<li class="has-line-data" data-line-start="17" data-line-end="18"><strong>targetitas</strong> en <a href="html/index.html#image-grid">articles</a> amb textoverflow per als títols, imatges ajustades, data…</li>
+<li class="has-line-data" data-line-start="18" data-line-end="19"><strong>Drag &amp; Drop</strong> d’imatges en <a href="html/index.html#cv03">canvas3</a> amb <a href="css/DnD.css">estil</a> i <a href="js/DnD.js">js</a> propis.</li>
+<li class="has-line-data" data-line-start="19" data-line-end="20"><strong>SVG</strong></li>
+<li class="has-line-data" data-line-start="20" data-line-end="21"><strong>Video</strong></li>
 </ul>
-<h2 class="code-line" data-line-start="21" data-line-end="22"><a id="CSS_21"></a>CSS</h2>
-<p class="has-line-data" data-line-start="22" data-line-end="23">Conté fulla d’<a href="css/estilo.css">estil comú</a> que se l’importen estils més concrets com <a href="css/navbar.css">navbar</a>, <a href="css/grid.css">grid-targetetes</a>, <a href="css/formularios.css">formularis</a>, <a href="css/tabla.css">taula</a></p>
-<h3 class="code-line" data-line-start="23" data-line-end="24"><a id="CSS_Base_23"></a>CSS Base</h3>
-<h2 class="code-line" data-line-start="25" data-line-end="26"><a id="JS_25"></a>JS</h2>
-<p class="has-line-data" data-line-start="26" data-line-end="27">Conté codi per a <a href="js/canvas.js">canvas</a>, <a href="js/modal.js">modal</a>, <a href="js/peticions.js">peticions</a>.</p>
-<h2 class="code-line" data-line-start="28" data-line-end="29"><a id="BD__APIs_28"></a>BD - APIs</h2>
-<h3 class="code-line" data-line-start="29" data-line-end="30"><a id="Com_importar_una_api_29"></a>Com importar una api</h3>
-<p class="has-line-data" data-line-start="30" data-line-end="31">Per a importar una BD hi ha que entrar en PHPMyAdmin y donar-li a <strong>importar</strong> el fitxer SQL que ens proporcionen. No cal posar cap conficuració diferent a la de per defecte.</p>
-<p class="has-line-data" data-line-start="32" data-line-end="33">Per a importar l’API hi ha que posar les carpetes que la conformen en la direcció correcta (<em>p.e. “C://xampp/htdocs/pcw/practica2”</em>). Cal revisar l’arxiu ocult <code>.htacces</code> per a vore que tot está ben posat.</p>
-<p class="has-line-data" data-line-start="34" data-line-end="35">Per a més informació vore el <a href="Video%20preparacion.mkv">vídeo</a> explicatiu.</p>
+<h2 class="code-line" data-line-start="23" data-line-end="24"><a id="CSS_23"></a>CSS</h2>
+<p class="has-line-data" data-line-start="24" data-line-end="25">Conté fulla d’<a href="css/estilo.css">estil comú</a> on s’importen estils més concrets com <a href="css/navbar.css">navbar</a>, <a href="css/grid.css">grid-targetetes</a>, <a href="css/formularios.css">formularis</a>, <a href="css/tabla.css">taula</a></p>
+<h3 class="code-line" data-line-start="26" data-line-end="27"><a id="CSS_Basecssestilocss_26"></a><a href="css/estilo.css">CSS Base</a></h3>
+<p class="has-line-data" data-line-start="27" data-line-end="28">Conté la paleta de colors de tota la página (no cal repetil el <code>html{...}</code> en la resta de CSSs) i l’estil general de elements com:</p>
+<ul>
+<li class="has-line-data" data-line-start="28" data-line-end="29">body</li>
+<li class="has-line-data" data-line-start="29" data-line-end="30">header, footer</li>
+<li class="has-line-data" data-line-start="30" data-line-end="31">enllaços <code>&lt;a&gt;</code></li>
+<li class="has-line-data" data-line-start="31" data-line-end="32">text overflow <em>.recorte</em></li>
+<li class="has-line-data" data-line-start="32" data-line-end="33">cartetes</li>
+<li class="has-line-data" data-line-start="33" data-line-end="34">botons</li>
+<li class="has-line-data" data-line-start="34" data-line-end="35">dialog</li>
+<li class="has-line-data" data-line-start="35" data-line-end="37"><strong>media queries</strong> d’aquests</li>
+</ul>
+<h3 class="code-line" data-line-start="37" data-line-end="38"><a id="NavBarcssnavbarcss_37"></a><a href="css/navbar.css">NavBar</a></h3>
+<p class="has-line-data" data-line-start="38" data-line-end="39">Conté tot lo relatiu a la barra de navegació. Per a que funcione l’estil <code>&lt;nav&gt;</code> ha d’estar solt (no pot estar clavat en <code>&lt;header&gt;</code> o <code>&lt;main&gt;</code>).</p>
+<p class="has-line-data" data-line-start="40" data-line-end="41">Té els seus propis media queries (en <code>estilo.css</code> no queda res), que el 2n més petit al dependre de les icones (no ens caldrá a l’examen), té eixa línea comentada.</p>
+<p class="has-line-data" data-line-start="42" data-line-end="44">Si tenim que remarcar enllaç actiu usem <code>.act</code>.<br>
+Juguem amb el <code>#chkmenu</code> i el label associat de manera que només es veu el ≡ al MQ xicotet i té el check ocult. En la resta de MQ està <code>display: none</code>.</p>
+<p class="has-line-data" data-line-start="45" data-line-end="46">Amb el JS s’afigen més enllaços (segons estigues <em>loguejat</em>), però l’estil els acomoda per a que estiguen ben presentats.</p>
+<h3 class="code-line" data-line-start="47" data-line-end="48"><a id="Formularioscssformularioscss_47"></a><a href="css/formularios.css">Formularios</a></h3>
+<p class="has-line-data" data-line-start="48" data-line-end="49">Codi per a donar-li estil al formulari que hem posat. Comentat hi ha el <code>&lt;textarea&gt;</code> que estava en la P2 per a registre, i en <code>#g-formulario &gt; textarea</code> es el que usavem per al textarea dels comentaris de la P2.</p>
+<h3 class="code-line" data-line-start="50" data-line-end="51"><a id="Gridcssgridcss_50"></a><a href="css/grid.css">Grid</a></h3>
+<p class="has-line-data" data-line-start="51" data-line-end="52">S’usa per a disposar les cartetes amb imatges (<code>section &gt; articles</code>).</p>
+<p class="has-line-data" data-line-start="53" data-line-end="54"><em>.image-grid</em> disposa els elements que conté (en aquest cas <code>&lt;articles&gt;</code>) amb <strong>grid</strong> la repetició i el hueco que li indiquem (<code>--num-cols</code> i <code>gap</code>).</p>
+<p class="has-line-data" data-line-start="55" data-line-end="56">En el MQ de <code>estilo.css</code> canbiem el <code>--num-cols</code> per a que cápiguen menys columnes per fila. Després unes xicotetes acomodacions i ja.</p>
+<h3 class="code-line" data-line-start="57" data-line-end="58"><a id="Tablacsstablacss_57"></a><a href="css/tabla.css">Tabla</a></h3>
+<p class="has-line-data" data-line-start="58" data-line-end="59">Té l’estil de les taules <strong>estátiques</strong> que afegim. Comentat está el codi per als números jugables de la Práctica 3.</p>
+<p class="has-line-data" data-line-start="60" data-line-end="61">La classe <code>.tuturno</code> es per a destacar una fila de la taula.</p>
+<h2 class="code-line" data-line-start="63" data-line-end="64"><a id="JS_63"></a>JS</h2>
+<p class="has-line-data" data-line-start="64" data-line-end="65">Conté codi per a <a href="js/canvas.js">canvas</a>, <a href="js/modal.js">modal</a>, <a href="js/peticions.js">peticions</a>.</p>
+<h2 class="code-line" data-line-start="66" data-line-end="67"><a id="BD__APIs_66"></a>BD - APIs</h2>
+<h3 class="code-line" data-line-start="67" data-line-end="68"><a id="Com_importar_una_api_67"></a>Com importar una api</h3>
+<p class="has-line-data" data-line-start="68" data-line-end="69">Per a importar una BD hi ha que entrar en PHPMyAdmin y donar-li a <strong>importar</strong> el fitxer SQL que ens proporcionen. No cal posar cap conficuració diferent a la de per defecte.</p>
+<p class="has-line-data" data-line-start="70" data-line-end="71">Per a importar l’API hi ha que posar les carpetes que la conformen en la direcció correcta (<em>p.e. “C://xampp/htdocs/pcw/practica2”</em>). Cal revisar l’arxiu ocult <code>.htacces</code> per a vore que tot está ben posat.</p>
+<p class="has-line-data" data-line-start="72" data-line-end="73">Per a més informació vore el <a href="Video%20preparacion.mkv">vídeo</a> explicatiu.</p>
 </body></html>
