--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -169,7 +169,27 @@
         </section>
 
         <!-- DRAG & DROP -->
-        <section>
+        <section id="origen"> <!-- de llista -->
+            <h2>Lista origen</h2>
+            <ul> <!-- ul>li*10>lorem10 -->
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, repellat.</li>
+                <li>Blanditiis, fuga corporis dolorum odio porro earum eius explicabo quod.</li>
+                <li>Commodi cumque perferendis alias nam nostrum, sed id quae quo.</li>
+                <li>Perspiciatis eum molestiae quia. Recusandae perspiciatis quia corporis earum ipsam!</li>
+                <li>Ullam iure fugit corrupti aspernatur totam consequuntur obcaecati, voluptas autem.</li>
+                <li>Temporibus quasi libero officiis reiciendis iste sit fugiat, reprehenderit inventore.</li>
+                <li>Dolore facilis dolor dignissimos voluptate mollitia optio obcaecati, cumque ipsa?</li>
+                <li>Error ipsum tenetur distinctio soluta. Pariatur minus laboriosam dolores provident.</li>
+                <li>Velit a temporibus voluptas consequatur reprehenderit! Enim voluptatum eveniet beatae.</li>
+                <li>Quos, eius. Et unde porro ex quasi nihil ipsa incidunt?</li>
+            </ul>
+        </section>
+        <section id="destino">
+            <h2>Lista destino</h2>
+            <ul></ul>
+        </section>
+
+        <section> <!-- d'imatges -->
             <h2>Drag and Drop IMG</h2>
             <canvas id="cv03" width="480" height="360"></canvas>
             <footer>
@@ -202,7 +222,8 @@
     </footer>
 
     <script>
-        prepararDnD();
+        prepararDnD1();
+        prepararDnD2();
         prepararSVG();
     </script>
 </body>
