enllaços a pdfs i altres práctiques

--- a/apunts/html/index.html
+++ b/apunts/html/index.html
@@ -214,7 +214,7 @@
     
         <img src="circulo.svg" alt="circulo">
 
-        <section>
+        <section id="g-video">
             <h2>Vídeo</h2>
             <video width="480" height="360" controls>
                 <source src="src/mat.mp4" type="video/mp4">
