--- a/apunts/guia HTML.html
+++ b/apunts/guia HTML.html
@@ -19,9 +19,9 @@
 <li class="has-line-data" data-line-start="15" data-line-end="16"><strong>canvas</strong> en un per a posar linies, rectangles, divisions… + posar i copiar imatges en <a href="html/index.html#cv01">CV01</a>. I de la imatge posada amb el de dalt, modificarli els canals de color en <a href="html/index.html#cv02">CV02</a></li>
 <li class="has-line-data" data-line-start="16" data-line-end="17"><strong>table</strong> en una <a href="html/index.html#g-tabla">taula estática</a></li>
 <li class="has-line-data" data-line-start="17" data-line-end="18"><strong>targetitas</strong> en <a href="html/index.html#image-grid">articles</a> amb textoverflow per als títols, imatges ajustades, data…</li>
-<li class="has-line-data" data-line-start="18" data-line-end="19"><strong>Drag &amp; Drop</strong> d’imatges en <a href="html/index.html#cv03">canvas3</a> amb <a href="css/DnD.css">estil</a> i <a href="js/DnD.js">js</a> propis.</li>
-<li class="has-line-data" data-line-start="19" data-line-end="20"><strong>SVG</strong></li>
-<li class="has-line-data" data-line-start="20" data-line-end="21"><strong>Video</strong></li>
+<li class="has-line-data" data-line-start="18" data-line-end="19"><strong>Drag &amp; Drop</strong> de <em>llistes</em> (passar <code>&lt;li&gt;</code> d’un section a altre) i d’<em>imatges</em> en <a href="html/index.html#cv03">canvas3</a> amb <a href="css/DnD.css">estil</a> i <a href="js/DnD.js">js</a> propis.</li>
+<li class="has-line-data" data-line-start="19" data-line-end="20"><strong>SVG</strong> on es posen <a href="html/circulo.svg">circulos</a> aleatòriament (però en la mateixa coordenada Y)</li>
+<li class="has-line-data" data-line-start="20" data-line-end="21"><strong>Video</strong> per a donar al <a href="html/index.html#g-video">play</a> i pausar i <a href="html/index.html#cv04">vídeo+canvas</a></li>
 </ul>
 <h2 class="code-line" data-line-start="23" data-line-end="24"><a id="CSS_23"></a>CSS</h2>
 <p class="has-line-data" data-line-start="24" data-line-end="25">Conté fulla d’<a href="css/estilo.css">estil comú</a> on s’importen estils més concrets com <a href="css/navbar.css">navbar</a>, <a href="css/grid.css">grid-targetetes</a>, <a href="css/formularios.css">formularis</a>, <a href="css/tabla.css">taula</a></p>
@@ -53,10 +53,29 @@ Juguem amb el <code>#chkmenu</code> i el label associat de manera que només es 
 <p class="has-line-data" data-line-start="58" data-line-end="59">Té l’estil de les taules <strong>estátiques</strong> que afegim. Comentat está el codi per als números jugables de la Práctica 3.</p>
 <p class="has-line-data" data-line-start="60" data-line-end="61">La classe <code>.tuturno</code> es per a destacar una fila de la taula.</p>
 <h2 class="code-line" data-line-start="63" data-line-end="64"><a id="JS_63"></a>JS</h2>
-<p class="has-line-data" data-line-start="64" data-line-end="65">Conté codi per a <a href="js/canvas.js">canvas</a>, <a href="js/modal.js">modal</a>, <a href="js/peticions.js">peticions</a>.</p>
+<p class="has-line-data" data-line-start="64" data-line-end="65">Conté codi per a <a href="js/canvas.js">canvas</a>, <a href="js/modal.js">modal</a>, <a href="js/peticions.js">peticions</a>, <a href="js/svg.js">SVG</a>, <a href="js/video.js">video</a>, <a href="js/DnD.js">drag and drop</a>.</p>
 <h2 class="code-line" data-line-start="66" data-line-end="67"><a id="BD__APIs_66"></a>BD - APIs</h2>
 <h3 class="code-line" data-line-start="67" data-line-end="68"><a id="Com_importar_una_api_67"></a>Com importar una api</h3>
 <p class="has-line-data" data-line-start="68" data-line-end="69">Per a importar una BD hi ha que entrar en PHPMyAdmin y donar-li a <strong>importar</strong> el fitxer SQL que ens proporcionen. No cal posar cap conficuració diferent a la de per defecte.</p>
 <p class="has-line-data" data-line-start="70" data-line-end="71">Per a importar l’API hi ha que posar les carpetes que la conformen en la direcció correcta (<em>p.e. “C://xampp/htdocs/pcw/practica2”</em>). Cal revisar l’arxiu ocult <code>.htacces</code> per a vore que tot está ben posat.</p>
 <p class="has-line-data" data-line-start="72" data-line-end="73">Per a més informació vore el <a href="Video%20preparacion.mkv">vídeo</a> explicatiu.</p>
+<h2 class="code-line" data-line-start="74" data-line-end="75"><a id="Altres_prctiques_74"></a>Altres práctiques</h2>
+<ul>
+<li class="has-line-data" data-line-start="75" data-line-end="76"><a href="../p1/index.html">P1</a>: página web estàtica <em>Comunícate</em> (HTML+CSS)</li>
+<li class="has-line-data" data-line-start="76" data-line-end="77"><a href="../p2/index.html">P2</a>: página web dinámica <em>Comunícate</em> (HTML+CSS+JS con APIs y BD)</li>
+<li class="has-line-data" data-line-start="77" data-line-end="79"><a href="../p3/index.html">P3</a>: Juego NumTrix ((HTML+CSS+JS con APIs))</li>
+</ul>
+<h2 class="code-line" data-line-start="79" data-line-end="80"><a id="PDFs_teoria_79"></a>PDFs teoria</h2>
+<ul>
+<li class="has-line-data" data-line-start="80" data-line-end="81"><a href="../apunts/classe/TEMA%2001%20-%20Introducci%C3%B3n.pdf">Introducción</a></li>
+<li class="has-line-data" data-line-start="81" data-line-end="82"><a href="../apunts/classe/TEMA%2002%20-%20HTML.pdf">HTML</a></li>
+<li class="has-line-data" data-line-start="82" data-line-end="83"><a href="../apunts/classe/TEMA%2003%20-%20CSS.pdf">CSS</a></li>
+<li class="has-line-data" data-line-start="83" data-line-end="84"><a href="../apunts/classe/TEMA%2004%20-%20JavaScript.pdf">JS</a></li>
+<li class="has-line-data" data-line-start="84" data-line-end="85"><a href="../apunts/classe/TEMA%2005%20-%20DOM%20y%20BOM.pdf">Dom y Bom</a></li>
+<li class="has-line-data" data-line-start="85" data-line-end="86"><a href="../apunts/classe/TEMA%2006%20-%20JavaScript%20avanzado.pdf">JS Avanzado</a></li>
+<li class="has-line-data" data-line-start="86" data-line-end="87"><a href="../apunts/classe/TEMA%2007%20-%20APIs%20HTML.pdf">APIs HTML</a></li>
+<li class="has-line-data" data-line-start="87" data-line-end="88"><a href="../apunts/classe/API%20File.pdf">API File</a></li>
+<li class="has-line-data" data-line-start="88" data-line-end="89"><a href="../apunts/classe/API%20Web%20Storage.pdf">API Web Storage</a></li>
+<li class="has-line-data" data-line-start="89" data-line-end="90"><a href="../apunts/classe/Elemento%20dialog.pdf">Elemento Dialog</a></li>
+</ul>
 </body></html>
